// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Spinner lg and type grow renders correctly 1`] = `
<jest>
  <div
    class="spinner-grow spinner-grow-lg text-danger"
    role="status"
  >
    
  
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
    

  </div>
</jest>
`;

exports[`OE - Spinner lg renders correctly 1`] = `
<jest>
  <div
    class="spinner-border spinner-border-lg text-danger"
    role="status"
  >
    
  
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
    

  </div>
</jest>
`;

exports[`OE - Spinner renders correctly 1`] = `
<jest>
  <div
    class="spinner-border text-danger"
    role="status"
  >
    
  
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
    

  </div>
</jest>
`;

exports[`OE - Spinner renders grow correctly 1`] = `
<jest>
  <div
    class="spinner-grow text-danger"
    role="status"
  >
    
  
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
    

  </div>
</jest>
`;

exports[`OE - Spinner sm and type grow renders correctly 1`] = `
<jest>
  <div
    class="spinner-grow spinner-grow-sm text-danger"
    role="status"
  >
    
  
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
    

  </div>
</jest>
`;

exports[`OE - Spinner sm renders correctly 1`] = `
<jest>
  <div
    class="spinner-border spinner-border-sm text-danger"
    role="status"
  >
    
  
    <span
      class="visually-hidden"
    >
      Loading...
    </span>
    

  </div>
</jest>
`;
